# MutAgg

./: README.md  pyproject.toml
mutagg/: __init__.py  aggregate.py  cli.py  mr.py  split.py
