[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutagg"
version = "0.1.0"
description = "MutAgg: Mutual Rank-based coexpression aggregation with degree-corrected meta-analysis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "E. Poretsky" }]
keywords = ["coexpression", "mutual-rank", "RNA-seq", "meta-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "statsmodels>=0.13",
    "fast-poibin>=0.2",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.4"]

[project.scripts]
mutagg = "mutagg.cli:main"

[project.urls]
Homepage = "https://github.com/eporetsky/MutAgg"
Repository = "https://github.com/eporetsky/MutAgg"

[tool.setuptools.packages.find]
where = ["."]
include = ["mutagg*"]
